# cool_synth

./: CMakeLists.txt  todo.org
src/audio/: CoolSynthPlugin.hpp
src/gui/: MainWindow.cpp  MainWindow.hpp  main.cpp
